--- a/patronazh/main/templates/main/index.html
+++ b/patronazh/main/templates/main/index.html
@@ -10,7 +10,7 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.7.1/less.min.js" ></script>
 
 	<!-- шрифты -->
-	<link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c&amp;subset=cyrillic" rel="stylesheet">
 
 	<title>Патронажная служба</title>
 </head>
@@ -35,6 +35,124 @@
 			</nav>			
 		</div>
 	</header>
+
+	<main>
+		<section class="main-slide">
+			<div class="left-side">
+				<h1>
+					АНО &#171Патронажная служба&#187
+				</h1>
+				<h3>
+					Мы разделяем Вашу боль и радуемся<br>
+					результатам совместных усилий!
+				</h3>
+				<form class="main-form">
+					<h4>
+						Оставьте <span>заявку</span> и мы <span>будем рядом</span>
+					</h4>
+
+					<div class="form-group">
+						<label>Имя и фамилия:</label>
+						<input type="text" name="name">
+					</div>
+					<div class="form-group number">
+						<label>Номер телефона!</label>
+						<input type="text" name="telephone">
+					</div>
+					<div class="form-group">
+						<label>Почтовый ящик!</label>
+						<input type="text" name="e-mail">
+					</div>								
+					<div class="agree">
+						<label id="checkbox-label" class="uncheck" name="agree"><input type="checkbox" onclick="fun()"> Согласие на обработку персональных данных</label>
+					</div>
+					<button>Свяжитесь со мной!</button>
+
+				</form>
+			</div>
+			<div class="rigth-side">
+				<img src="{% static 'img/grandma - 1366.png' %}">
+			</div>
+		</section>
+
+		<section class="advantages">
+			<div class="left-side">
+				<h1>Патронаж - надежный помощник!</h1>
+				<ol>
+					<li>
+						<dl>
+							<dt>
+								<h3>1. С Вами професиионалы</h3>
+							</dt>
+							<dd>
+								Все наши сотрудники проходят <span>профессиональную подготовку</span><br>
+								согласно профессиональному стандартуот Минтруда России
+							</dd>
+						</dl>
+					</li>	
+					<li>
+						<dl>
+							<dt>
+								<h3>2. Найдем подход и поддержим</h3>
+							</dt>
+							<dd>
+								<span>Умеем найти контакт, </span>
+								понять предпочтения, морально поддержать
+							</dd>
+						</dl>
+					</li>	
+					<li>
+						<dl>
+							<dt>
+								<h3>3. Освободим время для родственников</h3>
+							</dt>
+							<dd>
+								Избавим от рутинных дел и поможем<span>сконцентрировать внимание<br>на выздоровлении</span>
+								и более позитивном общении членов семьи
+							</dd>
+						</dl>
+					</li>	
+					<li>
+						<dl>
+							<dt>
+								<h3>4. Помомжем уменьшить расходы</h3>
+							</dt>
+							<dd>
+								Благодаря Федеральному Закону 442<br>Вы можете<span>уменьшить расходы по уходу</span>
+								за Вашими близкими!
+							</dd>
+						</dl>
+					</li>	
+					<li>
+						<dl>
+							<dt>
+								<h3>5. Окажем благотворительную помощь</h3>
+							</dt>
+							<dd>
+								Представляем своим пациентам по заявлению<span>памперсы и ТСР!</span>
+							</dd>
+						</dl>
+					</li>																					
+				</ol>
+			</div>
+
+			<div class="rigth-side">
+				<img src="{% static 'img/illustration-1366.png' %}">
+			</div>
+		</section>
+	</main>
+
+	<script>
+		function fun(){
+			var label_checkbox = document.getElementById("checkbox-label");
+			if (label_checkbox.className === "uncheck"){
+				label_checkbox.className = "check";
+			}
+			else {
+				label_checkbox.className = "uncheck"
+			}
+		}
+	</script>
 
 </body>
 </html>
